--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
 body {
     font-family: 'Lato', sans-serif;
 }
+
+.navbar-expand-lg .navbar-nav .nav-link {
+    margin-right: 20px;
+    font-size: 18px;
+}
+
+.carousel-caption {
+    top: 50%;
+    left: 50%;
+    bottom: unset;
+    right: 10%;
+    transform: translate(-50%, -50%);
+}
+
+
+
+/* <h3>Mechine Learing From skatch </h3>
+<p>The goal of this online education is understanding and the goal of the traing later on
+    this course will be the performance.</p>
+<button type="button" class="btn btn-primary">Get Register</button> */
