--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,18 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+.btn-style {
+    background-color: #289BDE;
+    outline: none;
+}
+
+/* nav part  */
 .navbar-expand-lg .navbar-nav .nav-link {
     margin-right: 20px;
     font-size: 18px;
 }
 
+/* carousel part css  */
 .carousel-caption {
     top: 50%;
     left: 50%;
@@ -14,6 +21,20 @@ body {
     right: 10%;
     transform: translate(-50%, -50%);
 }
+
+#e-learning-info {
+    background-color: #F4FAFD;
+}
+
+.more-info {
+    gap: 50px;
+}
+
+.para {
+    color: #777777;
+    width: 95%;
+}
+
 
 
 
