--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,27 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+.p-color {
+    color: #777777;
+}
+
+a {
+    text-decoration: none;
+}
+
 .btn-style {
     background-color: #289BDE;
     outline: none;
 }
 
+/* d-flex justify-content-center */
 /* nav part  */
+#navbarNav {
+    margin-left: 120px;
+}
+
 .navbar-expand-lg .navbar-nav .nav-link {
-    margin-right: 20px;
+    margin-right: 15px;
     font-size: 18px;
 }
 
@@ -22,23 +35,263 @@ body {
     transform: translate(-50%, -50%);
 }
 
+.for-mobile {
+    display: none;
+}
+
+/* e-learing info  */
 #e-learning-info {
     background-color: #F4FAFD;
+    margin-top: 100px;
 }
 
 .more-info {
     gap: 50px;
 }
 
-.para {
-    color: #777777;
+.e-learing-p {
     width: 95%;
 }
 
+/* ready tp join  */
+#ready-to-join {
+    background-color: #289BDE;
+    margin-top: 100px;
+}
+
+#ready-to-join p {
+    color: #F4F4F4;
+}
+
+/* meet successfull students  */
+#successfull-students {
+    margin-top: 100px;
+}
+
+/* students-feedback  */
+#students-feedback {
+    margin-top: 80px;
+    width: fit-content;
+}
+
+.feedback {
+    height: 580px !important;
+}
+
+/* frequently asked question   */
+.carousel-control-prev {
+    position: absolute;
+    left: -52px;
+}
+
+.carousel-control-next {
+    position: absolute;
+    right: -52px;
+}
+
+.prev-icon path,
+.next-icon path {
+    /* fill: blue; */
+    stroke: blue;
+}
+
+/* for mobile resposive  */
+
+/* for portrait phones  */
+@media (min-width: 350px) and (max-width: 575px) {
+    .other-btn {
+        display: none;
+    }
+
+    .carousel-caption {
+        display: block !important;
+        right: -48%;
+    }
+
+    .carousel-caption h3 {
+        font-size: 20px;
+    }
+
+    .carousel-caption p {
+        font-size: 12px;
+    }
+
+    .btn-style {
+        font-size: 13px;
+    }
+
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+        display: none;
+    }
+
+    .for-mobile {
+        display: block;
+    }
+
+    .for-desktop {
+        display: none;
+    }
+
+    .course-content {
+        padding: 20px 0px 0px 40px
+    }
+
+    .course-part h2 {
+        font-size: 18px;
+    }
+
+    .course-part p {
+        font-size: 14px;
+    }
+
+    .e-learning-content {
+        padding: 30px;
+    }
+
+    #ready-to-join {
+        padding-bottom: 30px;
+    }
+
+    .ready-info h2 {
+        padding-left: 10px !important;
+        padding-right: 10px !important;
+    }
+
+    .ready-info p {
+        padding-left: 10px !important;
+        padding-right: 10px !important;
+    }
+
+    .feedback-container {
+        margin: 10px !important;
+    }
+
+    .feedback-content {
+        padding: 10px !important;
+    }
+
+    #accordionExample {
+        width: 100% !important;
+    }
+
+    #trusted-companies {
+        display: none;
+    }
+}
+
+/* for landscape phone  */
+@media (min-width: 576px) and (max-width: 786px) {
+    .other-btn {
+        display: none;
+    }
+
+    .carousel-caption {
+        display: block !important;
+        right: -42%;
+    }
+
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+        display: none;
+    }
+
+    .for-mobile {
+        display: block;
+    }
+
+    .for-desktop {
+        display: none;
+    }
+
+    .course-part h2 {
+        font-size: 18px;
+    }
+
+    .course-part p {
+        font-size: 14px;
+    }
+
+    .e-learning-content {
+        padding: 50px;
+    }
+
+    #ready-to-join {
+        padding-bottom: 30px;
+    }
+
+    .ready-info h2 {
+        padding-left: 10px !important;
+        padding-right: 10px !important;
+    }
+
+    .ready-info p {
+        padding-left: 10px !important;
+        padding-right: 10px !important;
+    }
+
+    #accordionExample {
+        width: 100% !important;
+    }
+
+    #trusted-companies {
+        display: none;
+    }
+}
+
+/* for tablet devices */
+@media (min-width: 787px) and (max-width: 992px) {
+    .other-btn {
+        display: none;
+    }
+
+    .carousel-caption {
+        display: block !important;
+        right: -22%;
+    }
+
+    .carousel-control-prev-icon {
+        position: absolute;
+        left: 52px;
+    }
+
+    .carousel-control-next-icon {
+        position: absolute;
+        right: 62px;
+    }
+
+    .for-desktop {
+        display: none;
+    }
+
+    .for-mobile {
+        display: block;
+    }
+
+    .e-learning-content {
+        padding: 20px;
+    }
+
+    .e-learning-content p {
+        margin-top: 0px;
+        font-size: 14px;
+    }
+
+    .more-info {
+        margin-top: -50px;
+    }
+
+    .card-heigth {
+        height: 450px !important;
+    }
+
+    #accordionExample {
+        width: 100% !important;
+    }
+
+    #trusted-companies {
+        display: none;
+    }
 
 
-
-/* <h3>Mechine Learing From skatch </h3>
-<p>The goal of this online education is understanding and the goal of the traing later on
-    this course will be the performance.</p>
-<button type="button" class="btn btn-primary">Get Register</button> */
+}
